[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-grantami-recordlists"
version = "2.0.0"
description = "A python wrapper for the Granta MI RecordLists API"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/grantami-recordlists"
documentation = "https://recordlists.grantami.docs.pyansys.com"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ansys-openapi-common = "^2.0.0"
# Ensure PIP_INDEX_URL is not set in CI when building on release branches.
ansys-grantami-serverapi-openapi = "~=5.0"
requests = "^2.26"

# Optional documentation dependencies
[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = "^8.1.3"
numpydoc = "^1.4.0"
ansys-sphinx-theme = "^1.0.3"
sphinx-copybutton = "^0.5.0"
jupytext = "^1.14.4"
nbsphinx = "^0.9.0"
ipykernel = "^6.21.2" # required by nbsphinx to run notebooks.
sphinx-jinja = "^2.0.2"
sphinx-design = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
requests-mock = "^1.10.0"
pre-commit = "^4.0.1"
mypy = "^1.8.0"
types-requests = "^2.26"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.grantami"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = [
    """integration(*, mi_versions: None | list[tuple[int, int]] = None): The test requires a real database.
    The optional keyword-only argument \"mi_versions\" represents a MAJOR, MINOR version of Granta MI. The test will \
    be skipped if run against an incompatible Granta MI version. Deselect all integration tests with \
    'pytest -m \"not integration\"'. Specify MI version with '--mi-version MAJOR.MINOR'.""",
]

[tool.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
files = "src"
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[tool.towncrier]
package = "ansys.grantami.recordlists"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/grantami-recordlists/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/grantami-recordlists/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
